--- a/Shop-API.v1.yaml
+++ b/Shop-API.v1.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: 店铺API
+  title: 1. 店铺服务
   version: '1.0'
   description: ''
 servers:
@@ -93,7 +93,7 @@ paths:
           description: 页码
           required: true
       tags:
-        - 店铺API
+        - 店铺
 components:
   schemas:
     ShopInfo:
