--- a/models/payee-bank-account.v1.yaml
+++ b/models/payee-bank-account.v1.yaml
@@ -31,7 +31,7 @@ properties:
     maxLength: 2
   cnyBankInfo:
     $ref: ./CNY-bank-info.v1.yaml
-  foreignBankInfo:
+  noneCNYBankInfo:
     $ref: ./foreign-bank-info.v1.yaml
   status:
     type: string
